# LinkSphere---webRTC-app-live

./: .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  QUICK_START.md  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  fix_database.py  railway.toml  requirements-prod.txt  restart_server.bat  start.sh  test_app.py
alembic/: env.py
alembic/versions/: 3c9ae0ef7b40_add_name_and_description_to_rooms.py
backend/: .dockerignore  Dockerfile  WebRTC_Backend_Integration_Details.txt  alembic.ini  check_otp.py  demo_auth_flow.py  pyproject.toml  requirements-prod.txt  requirements.txt  start.bat  start.sh  start_app.bat  swagger.html  test_auth.py  test_auth_flow.py  test_rooms.py  test_signup.py
backend/alembic/: env.py
backend/alembic/versions/: faea0d2c8833_initial_migration.py
backend/app/: main.py  main_new.py
backend/app/api/: api.py  api_new.py  auth.py  auth_new.py  dependencies.py  metrics.py  rooms.py  routes.py
backend/app/core/: auth_middleware.py  config.py  database.py
backend/app/models/: database_models.py  room.py  user.py
backend/app/schemas/: auth.py  auth_new.py  room.py  webrtc.py
backend/app/signaling/: manager.py  server.py
backend/app/utils/: auth.py  database.py  email.py  security.py
backend/tests/: conftest.py  test_api.py  test_auth_new.py  test_comprehensive.py
frontend/: 404.html  README.md  TESTING_CHECKLIST.md  dashboard.html  index.html  login.html  room.html  signup.html  test-dashboard.html  test.html  username.html  verify.html
nginx/: nginx.conf
(+7 files in other folders)
